@@ -1,5 +1,5 @@
-usr/lib/libpolkit-agent*.so
-usr/lib/libpolkit-agent*.a
-usr/lib/pkgconfig/polkit-agent*.pc
+usr/lib/*/libpolkit-agent*.so
+usr/lib/*/libpolkit-agent*.a
+usr/lib/*/pkgconfig/polkit-agent*.pc
 usr/include/polkit-1/polkitagent/
 usr/share/gir-1.0/PolkitAgent-1.0.gir
