@@ -1,1 +1,1 @@
-usr/lib/libpolkit-backend-1.so.*
+usr/lib/*/libpolkit-backend-1.so.*
