@@ -1,4 +1,4 @@
-usr/lib/libpolkit-backend*.so
-usr/lib/libpolkit-backend*.a
-usr/lib/pkgconfig/polkit-backend*.pc
+usr/lib/*/libpolkit-backend*.so
+usr/lib/*/libpolkit-backend*.a
+usr/lib/*/pkgconfig/polkit-backend*.pc
 usr/include/polkit-1/polkitbackend/
