@@ -1,1 +1,1 @@
-usr/lib/libpolkit-gobject-1.so.*
+usr/lib/*/libpolkit-gobject-1.so.*
