@@ -1,5 +1,5 @@
-usr/lib/libpolkit-gobject*.so
-usr/lib/libpolkit-gobject*.a
-usr/lib/pkgconfig/polkit-gobject*.pc
+usr/lib/*/libpolkit-gobject*.so
+usr/lib/*/libpolkit-gobject*.a
+usr/lib/*/pkgconfig/polkit-gobject*.pc
 usr/include/polkit-1/polkit/
 usr/share/gir-1.0/Polkit-1.0.gir
