@@ -2,7 +2,7 @@ etc/pam.d/
 etc/dbus-1/
 etc/polkit-1/
 usr/bin/
-usr/lib/polkit-1/extensions/*.so
+usr/lib/*/polkit-1/extensions/*.so
 usr/lib/policykit-1/
 usr/share/man/
 usr/share/polkit-1/
