@@ -1,6 +1,8 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
 %:
 	dh $@
 
@@ -12,10 +14,11 @@ override_dh_auto_configure:
 		--enable-gtk-doc \
 		--enable-man-pages \
 		--enable-introspection \
-		--disable-examples
+		--disable-examples \
+		--libexecdir=\$${prefix}/lib/policykit-1
 
 override_dh_makeshlibs:
-	dh_makeshlibs -Xusr/lib/polkit-1/
+	dh_makeshlibs -Xusr/lib/$(DEB_HOST_MULTIARCH)/polkit-1/
 
 override_dh_shlibdeps:
 	dh_shlibdeps
