@@ -5,6 +5,8 @@ policykit-1 (0.102-2) UNRELEASED; urgency=low
   * debian/rules: When building on Ubuntu, also consider the "sudo" group as
     administrator, for compatibility with Debian and sudo itself. Keep "admin"
     for existing systems. (LP: #893842)
+  * Convert to Multi-Arch and dh compat 9. Thanks Daniel Schaal for the
+    patch! (Closes: #636196)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 08 Aug 2011 14:14:58 +0200
 
